# voxel-engine

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  nix-run.sh
shaders/: bloom.comp.slang  common.slang  cull.comp.slang  debug.frag.slang  debug.vert.slang  exposure_reduce.comp.slang  mesh3d.frag.slang  mesh3d.vert.slang  probe_bda.comp.slang  probe_occupancy.comp.slang  probe_quad.comp.slang  probe_storage.comp.slang  shadow_depth.vert.slang  sky.frag.slang  sky.vert.slang  surface3d.frag.slang  surface3d.vert.slang  taa_resolve.comp.slang  tonemap.frag.slang  tonemap.vert.slang  tri.frag  tri.frag.slang  tri.vert  tri.vert.slang  tris2d.frag.slang  tris2d.vert.slang  tris2d_tex.frag.slang  vrs.comp.slang  warp.slang  water.slang
shaders_spv/: bloom_downsample.comp.spv  bloom_threshold.comp.spv  cull.comp.spv  debug.frag.spv  debug.vert.spv  exposure_reduce.comp.spv  mesh3d.frag.spv  mesh3d.vert.spv  mesh3d_water.frag.spv  shadow_depth.vert.spv  sky.frag.spv  sky.vert.spv  surface3d.frag.spv  surface3d.vert.spv  taa_resolve.comp.spv  tonemap.frag.spv  tonemap.vert.spv  tonemap_makeup.frag.spv  tri.frag.spv  tri.vert.spv  tris2d.frag.spv  tris2d.vert.spv  tris2d_tex.frag.spv  vrs.comp.spv
src/: camera.rs  capture.rs  color.rs  engine.rs  font.rs  frame.rs  genconst.rs  input.rs  lib.rs  main.rs  mesh.rs  producer.rs  profile.rs  rev.rs  screenshot.rs  skeleton.rs  surface.rs
src/vk/: alloc.rs  block_textures.rs  bloom.rs  buffers.rs  cull.rs  device.rs  exposure.rs  image.rs  image_upload.rs  instance.rs  mod.rs  (+15 more)
tests/: shader_validation.rs
(+15 files in other folders)
