[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "voxel_engine"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
ash = "0.38"
ash-window = "0.13"
winit = { version = "0.30", features = ["wayland", "x11"] }
raw-window-handle = "0.6"
glam = { version = "0.32.1", features = ["bytemuck"] }
bytemuck = { version = "1.23", features = ["derive"] }

log = "0.4"
env_logger = "0.11"

[build-dependencies]

# The game links this crate; keep its release profile aggressive so `cargo run
# --release` in either repo gets the same fully-inlined engine.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
